# plover-japanese-stenoword

./: README.md  plover_japanese_stenoword.py  setup.cfg
plover_japanese_stenoword/: system.py
plover_japanese_stenoword/dictionaries/: StenoWord.json  commands.json
