[metadata]
name = plover_japanese_stenoword
version = 0.0.1
description = Japanese StenoWord realtime system for Plover
long_description = file: README.rst
author = na2hiro
author_email = a@81.la
license = GNU General Public License v2 or later (GPLv2+)
url = https://github.com/na2hiro/plover-japanese-stenoword
classifiers =
	Development Status :: 4 - Beta
	Environment :: Plugins
	Intended Audience :: End Users/Desktop
	License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)
	Operating System :: OS Independent
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.6
keywords = plover plover_plugin

[options]
zip_safe = True
setup_requires =
	setuptools>=30.3.0
install_requires =
	plover>=4.0.0.dev1
packages =
	plover_japanese_stenoword

[options.entry_points]
plover.system =
  Japanese StenoWord = plover_japanese_stenoword.system
